# iams-backend

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  deploy.sh  docker-compose.override.yml  docker-compose.yml  pyproject.toml
config/: __init__.py  celery.py  settings.py  urls.py
config/settings/: __init__.py  base.py  dev.py  prod.py  test.py
docker/: entrypoint.sh
docs/: DATABASE_DESIGN.md  IAMS-Requirements-Document.md  IMPLEMENTATION-PLAN.md  MIGRATION-CHECKLIST.md  db-normalization-erd.md
iams/: admin.py  apps.py  audit.py  csa.py  dashboards.py  domain_serializers.py  exceptions.py  filters.py  icfr.py  integrations.py  logging.py  metrics.py  mfa.py  middleware.py  mixins.py  models.py  notifications.py  pagination.py  permissions.py  rbac_matrix.py  risk_engine.py  risk_rollup.py  security.py  serializers.py  signals.py  sso.py  telemetry.py  tests.py  urls.py  workflows.py  working_papers.py
iams/management/commands/: seed_approval_chains.py  seed_audit_universe.py  seed_demo_data.py  seed_rbac.py
iams/migrations/: 0001_initial.py  0002_activityitem_audit_auditableentity_auditlogentry_and_more.py  0003_evidencefile_file_alter_checklistitem_status.py  0004_approvalrequest_approvalstep.py  0005_auditreport_auditreportsection_manageddocument_and_more.py  0006_rename_sheet_name_riskassessmentimportissue_sheet_and_more.py  0007_evidencefile_quarantined_evidencefile_scan_signature_and_more.py  0008_auditlogentry_changes_auditlogentry_ip_address_and_more.py  0009_auditlogentry_immutability_trigger.py  0010_notificationpreference_notification_email_sent_at_and_more.py  0011_approvalrequest_last_action_at_approvalstep_due_at_and_more.py  0012_workingpaper.py  0013_auditkpi_qaipassessment_qaipfinding_and_more.py  0014_csaquestionnaire_csaquestion_csaresponse_csaanswer_and_more.py  0015_control_controltest_controlexception_and_more.py  0016_riskfactor_riskfactorweight_riskscoringmodel_and_more.py  0017_reportjob.py  0018_security_phase5.py  0019_perf_indexes_phase5.py  0020_sso_phase6.py  0021_integrations_phase6.py  0022_i18n_phase6.py  0023_audit_universe_phase7.py  0024_audit_universe_bulk_import.py  0025_audit_universe_deprecate_legacy.py  0026_auditableentity_estimated_man_days.py  0027_alter_auditableentity_entity_type.py  0028_alter_auditableentity_estimated_man_days.py  0029_auditableentity_impact_is_overridden_and_more.py  0030_auditableentity_custom_fields.py  0031_merge_departments_into_entities.py  0032_auditableentity_department_entity.py  0033_drop_department_model.py  0034_rbac_matrix_schema.py  0035_seed_modules.py  0036_map_legacy_roles.py  0037_seed_matrix_defaults.py  0038_backfill_department_entity.py  0039_finding_issuance_and_mgmt_response.py  0040_backfill_finding_issuance.py  (+2 more)
iams/reports/: __init__.py  annual_plan.py  audit_committee.py  audit_summary.py  base.py  cap_status.py  caps_excel.py  department_risk.py  finding_trends.py  findings_excel.py  icfr_summary.py  open_issues.py  qaip_annual.py  time_entries_excel.py
iams/tasks/: __init__.py  auth.py  bulk_import.py  dashboards.py  notify.py  reports.py  risk_scores.py  scans.py  workflows.py
iams/templates/iams/email/: notification.html  notification.txt  password_reset.html  password_reset.txt
iams/templates/iams/reports/: _base.html  annual_plan.html  audit_committee.html  audit_summary.html  cap_status.html  department_risk.html  finding_trends.html  icfr_summary.html  open_issues.html  qaip_annual.html
iams/tests/: __init__.py  _rbac.py  conftest.py  test_access_matrix.py  test_audit_trail.py  test_audit_universe.py  test_audit_universe_bulk.py  test_audit_universe_perf.py  test_auth.py  test_contract.py  test_csa.py  test_dashboards.py  test_department_merge_migration.py  test_i18n.py  test_icfr.py  test_integrations.py  test_legacy_domain.py  test_notifications.py  test_observability.py  test_performance.py  test_qaip.py  test_rbac_matrix.py  test_rbac_migrations.py  test_reports.py  test_risk_engine.py  test_scans.py  test_security.py  test_smoke.py  test_sso.py  test_workflows.py  test_working_papers.py
iams/tests/factories/: __init__.py  audits.py  users.py
iams/views/: __init__.py  auth.py  domain.py  health.py  integrations.py  permissions.py  roles.py  users.py
loadtests/: README.md  locustfile.py
media/audit_universe/imports/2026/05/15/: universe_Fiz1gH5.csv  universe_MkzkiEZ.csv  universe_oQGxVUK.csv
media/audit_universe/imports/2026/06/02/: universe_ToxMR6s.csv
media/evidence/2026/05/13/: evidence_8onNGDj.txt
media/working-papers/2026/05/13/: v2_hPDOV4W.txt  wp_BxgxtlX.txt  wp_mRuKrhQ.txt  wp_mriLdbH.txt
